--- a/Selenium-Automation-Elearning-Framework-TestNG/test-output/old/Default suite/methods-alphabetical.html
+++ b/Selenium-Automation-Elearning-Framework-TestNG/test-output/old/Default suite/methods-alphabetical.html
@@ -1,20 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="90c9c3">  <td>19/03/11 15:46:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC025.displayGroupByListBox()[pri:5, instance:com.training.sanity.tests.RTTC025@27efef64]">displayGroupByListBox</td> 
-  <td>main@1690287238</td>   <td></td> </tr>
-<tr bgcolor="90c9c3">  <td>19/03/11 15:46:56</td>   <td>-1632</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC025.displayReportsOptions()[pri:2, instance:com.training.sanity.tests.RTTC025@27efef64]">displayReportsOptions</td> 
-  <td>main@1690287238</td>   <td></td> </tr>
-<tr bgcolor="90c9c3">  <td>19/03/11 15:46:56</td>   <td>-1147</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC025.displaySalesOptions()[pri:3, instance:com.training.sanity.tests.RTTC025@27efef64]">displaySalesOptions</td> 
-  <td>main@1690287238</td>   <td></td> </tr>
-<tr bgcolor="90c9c3">  <td>19/03/11 15:46:58</td>   <td>114</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC025.filterReturnsDetails()[pri:6, instance:com.training.sanity.tests.RTTC025@27efef64]">filterReturnsDetails</td> 
-  <td>main@1690287238</td>   <td></td> </tr>
-<tr bgcolor="90c9c3">  <td>19/03/11 15:46:57</td>   <td>-629</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC025.navigateToReturnsPage()[pri:4, instance:com.training.sanity.tests.RTTC025@27efef64]">navigateToReturnsPage</td> 
-  <td>main@1690287238</td>   <td></td> </tr>
-<tr bgcolor="90c9c3">  <td>19/03/11 15:46:45</td>   <td>-12690</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC025.setUp()[pri:1, instance:com.training.sanity.tests.RTTC025@27efef64]">setUp</td> 
-  <td>main@1690287238</td>   <td></td> </tr>
-<tr bgcolor="90c9c3">  <td>19/03/11 15:46:45</td>   <td>-12706</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RTTC025.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.RTTC025@27efef64]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1690287238</td>   <td></td> </tr>
-<tr bgcolor="90c9c3">  <td>19/03/11 15:46:58</td>   <td>841</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RTTC025.tearDown()[pri:0, instance:com.training.sanity.tests.RTTC025@27efef64]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1690287238</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>19/03/12 19:43:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParentChildForCustomers.displayCustomersOptions()[pri:2, instance:com.training.sanity.tests.ParentChildForCustomers@27efef64]">displayCustomersOptions</td> 
+  <td>main@832947102</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>19/03/12 19:43:58</td>   <td>436</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParentChildForCustomers.navigateToCustomerPage()[pri:3, instance:com.training.sanity.tests.ParentChildForCustomers@27efef64]">navigateToCustomerPage</td> 
+  <td>main@832947102</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>19/03/12 19:43:59</td>   <td>1163</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParentChildForCustomers.searchCustomerToDelete()[pri:4, instance:com.training.sanity.tests.ParentChildForCustomers@27efef64]">searchCustomerToDelete</td> 
+  <td>main@832947102</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>19/03/12 19:43:49</td>   <td>-8852</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParentChildForCustomers.setUp()[pri:1, instance:com.training.sanity.tests.ParentChildForCustomers@27efef64]">setUp</td> 
+  <td>main@832947102</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>19/03/12 19:43:49</td>   <td>-8888</td> <td title="&gt;&gt;ParentChildForCustomers.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.ParentChildForCustomers@27efef64]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@832947102</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>19/03/12 19:44:00</td>   <td>2185</td> <td title="&lt;&lt;ParentChildForCustomers.tearDown()[pri:0, instance:com.training.sanity.tests.ParentChildForCustomers@27efef64]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@832947102</td>   <td></td> </tr>
 </table>
