--- a/Selenium-Automation-Elearning-Framework-TestNG/test-output/index.html
+++ b/Selenium-Automation-Elearning-Framework-TestNG/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\KetakiPendse\AppData\Local\Temp\testng-eclipse--1481180216\testng-customsuite.xml</span>
+                    <span>C:\Users\KetakiPendse\AppData\Local\Temp\testng-eclipse-854052014\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods,   6 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,32 +102,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC025" hash-for-method="displayGroupByListBox">displayGroupByListBox</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.ParentChildForCustomers" hash-for-method="displayCustomersOptions">displayCustomersOptions</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC025" hash-for-method="displayReportsOptions">displayReportsOptions</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.ParentChildForCustomers" hash-for-method="navigateToCustomerPage">navigateToCustomerPage</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC025" hash-for-method="displaySalesOptions">displaySalesOptions</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.ParentChildForCustomers" hash-for-method="searchCustomerToDelete">searchCustomerToDelete</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC025" hash-for-method="filterReturnsDetails">filterReturnsDetails</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC025" hash-for-method="navigateToReturnsPage">navigateToReturnsPage</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC025" hash-for-method="setUp">setUp</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.ParentChildForCustomers" hash-for-method="setUp">setUp</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -145,42 +135,28 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.training.sanity.tests.RTTC025</span>
+              <span class="class-name">com.training.sanity.tests.ParentChildForCustomers</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="displayGroupByListBox">
-                  </a> <!-- displayGroupByListBox -->
-                  <span class="method-name">displayGroupByListBox</span>
+                  <a name="displayCustomersOptions">
+                  </a> <!-- displayCustomersOptions -->
+                  <span class="method-name">displayCustomersOptions</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="displayReportsOptions">
-                  </a> <!-- displayReportsOptions -->
-                  <span class="method-name">displayReportsOptions</span>
+                  <a name="navigateToCustomerPage">
+                  </a> <!-- navigateToCustomerPage -->
+                  <span class="method-name">navigateToCustomerPage</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="displaySalesOptions">
-                  </a> <!-- displaySalesOptions -->
-                  <span class="method-name">displaySalesOptions</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="filterReturnsDetails">
-                  </a> <!-- filterReturnsDetails -->
-                  <span class="method-name">filterReturnsDetails</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="navigateToReturnsPage">
-                  </a> <!-- navigateToReturnsPage -->
-                  <span class="method-name">navigateToReturnsPage</span>
+                  <a name="searchCustomerToDelete">
+                  </a> <!-- searchCustomerToDelete -->
+                  <span class="method-name">searchCustomerToDelete</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -195,7 +171,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\KetakiPendse\AppData\Local\Temp\testng-eclipse--1481180216\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\KetakiPendse\AppData\Local\Temp\testng-eclipse-854052014\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -204,7 +180,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.training.sanity.tests.RTTC025&quot;/&gt;
+      &lt;class name=&quot;com.training.sanity.tests.ParentChildForCustomers&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -244,36 +220,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(6);
+data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'setUp')
-data.setCell(0, 2, 'com.training.sanity.tests.RTTC025')
-data.setCell(0, 3, 11054);
+data.setCell(0, 2, 'com.training.sanity.tests.ParentChildForCustomers')
+data.setCell(0, 3, 8848);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'filterReturnsDetails')
-data.setCell(1, 2, 'com.training.sanity.tests.RTTC025')
-data.setCell(1, 3, 725);
+data.setCell(1, 1, 'searchCustomerToDelete')
+data.setCell(1, 2, 'com.training.sanity.tests.ParentChildForCustomers')
+data.setCell(1, 3, 949);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'navigateToReturnsPage')
-data.setCell(2, 2, 'com.training.sanity.tests.RTTC025')
-data.setCell(2, 3, 628);
+data.setCell(2, 1, 'navigateToCustomerPage')
+data.setCell(2, 2, 'com.training.sanity.tests.ParentChildForCustomers')
+data.setCell(2, 3, 725);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'displaySalesOptions')
-data.setCell(3, 2, 'com.training.sanity.tests.RTTC025')
-data.setCell(3, 3, 516);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'displayReportsOptions')
-data.setCell(4, 2, 'com.training.sanity.tests.RTTC025')
-data.setCell(4, 3, 485);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'displayGroupByListBox')
-data.setCell(5, 2, 'com.training.sanity.tests.RTTC025')
-data.setCell(5, 3, 113);
+data.setCell(3, 1, 'displayCustomersOptions')
+data.setCell(3, 2, 'com.training.sanity.tests.ParentChildForCustomers')
+data.setCell(3, 3, 434);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 13 seconds</span>
+              <span class="suite-total-time">Total running time: 10 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -299,39 +267,31 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.training.sanity.tests.RTTC025</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
+              <div class="chronological-class-name">com.training.sanity.tests.ParentChildForCustomers</div> <!-- chronological-class-name -->
+              <div class="configuration-suite before">
                 <span class="method-name">setUpBeforeClass</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
+              </div> <!-- configuration-suite before -->
               <div class="test-method">
                 <span class="method-name">setUp</span>
-                <span class="method-start">16 ms</span>
+                <span class="method-start">42 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">displayReportsOptions</span>
-                <span class="method-start">11074 ms</span>
+                <span class="method-name">displayCustomersOptions</span>
+                <span class="method-start">8894 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">displaySalesOptions</span>
-                <span class="method-start">11559 ms</span>
+                <span class="method-name">navigateToCustomerPage</span>
+                <span class="method-start">9330 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">navigateToReturnsPage</span>
-                <span class="method-start">12077 ms</span>
+                <span class="method-name">searchCustomerToDelete</span>
+                <span class="method-start">10057 ms</span>
               </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">displayGroupByListBox</span>
-                <span class="method-start">12706 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">filterReturnsDetails</span>
-                <span class="method-start">12820 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-class after">
+              <div class="configuration-suite after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">13547 ms</span>
-              </div> <!-- configuration-class after -->
+                <span class="method-start">11079 ms</span>
+              </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
