--- a/Selenium-Automation-Elearning-Framework-TestNG/test-output/index.html
+++ b/Selenium-Automation-Elearning-Framework-TestNG/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\KetakiPendse\AppData\Local\Temp\testng-eclipse-854052014\testng-customsuite.xml</span>
+                    <span>C:\Users\KetakiPendse\AppData\Local\Temp\testng-eclipse--648481666\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,22 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.ParentChildForCustomers" hash-for-method="displayCustomersOptions">displayCustomersOptions</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.ParentChildForCustomers" hash-for-method="navigateToCustomerPage">navigateToCustomerPage</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.ParentChildForCustomers" hash-for-method="searchCustomerToDelete">searchCustomerToDelete</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.ParentChildForCustomers" hash-for-method="setUp">setUp</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC_081" hash-for-method="returnProduct">returnProduct</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -135,35 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.training.sanity.tests.ParentChildForCustomers</span>
+              <span class="class-name">com.training.sanity.tests.RTTC_081</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="displayCustomersOptions">
-                  </a> <!-- displayCustomersOptions -->
-                  <span class="method-name">displayCustomersOptions</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="navigateToCustomerPage">
-                  </a> <!-- navigateToCustomerPage -->
-                  <span class="method-name">navigateToCustomerPage</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="searchCustomerToDelete">
-                  </a> <!-- searchCustomerToDelete -->
-                  <span class="method-name">searchCustomerToDelete</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="setUp">
-                  </a> <!-- setUp -->
-                  <span class="method-name">setUp</span>
+                  <a name="returnProduct">
+                  </a> <!-- returnProduct -->
+                  <span class="method-name">returnProduct</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -171,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\KetakiPendse\AppData\Local\Temp\testng-eclipse-854052014\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\KetakiPendse\AppData\Local\Temp\testng-eclipse--648481666\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -180,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.training.sanity.tests.ParentChildForCustomers&quot;/&gt;
+      &lt;class name=&quot;com.training.sanity.tests.RTTC_081&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -220,28 +184,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'setUp')
-data.setCell(0, 2, 'com.training.sanity.tests.ParentChildForCustomers')
-data.setCell(0, 3, 8848);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'searchCustomerToDelete')
-data.setCell(1, 2, 'com.training.sanity.tests.ParentChildForCustomers')
-data.setCell(1, 3, 949);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'navigateToCustomerPage')
-data.setCell(2, 2, 'com.training.sanity.tests.ParentChildForCustomers')
-data.setCell(2, 3, 725);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'displayCustomersOptions')
-data.setCell(3, 2, 'com.training.sanity.tests.ParentChildForCustomers')
-data.setCell(3, 3, 434);
+data.setCell(0, 1, 'returnProduct')
+data.setCell(0, 2, 'com.training.sanity.tests.RTTC_081')
+data.setCell(0, 3, 14216);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 10 seconds</span>
+              <span class="suite-total-time">Total running time: 14 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -267,30 +219,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.training.sanity.tests.ParentChildForCustomers</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.training.sanity.tests.RTTC_081</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
-                <span class="method-name">setUpBeforeClass</span>
+                <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="test-method">
-                <span class="method-name">setUp</span>
-                <span class="method-start">42 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">displayCustomersOptions</span>
-                <span class="method-start">8894 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">navigateToCustomerPage</span>
-                <span class="method-start">9330 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">searchCustomerToDelete</span>
-                <span class="method-start">10057 ms</span>
+                <span class="method-name">returnProduct</span>
+                <span class="method-start">10875 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">11079 ms</span>
+                <span class="method-start">25176 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
