--- a/Selenium-Automation-Elearning-Framework-TestNG/test-output/old/Default suite/classes.html
+++ b/Selenium-Automation-Elearning-Framework-TestNG/test-output/old/Default suite/classes.html
@@ -4,26 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.training.sanity.tests.ParentChildForCustomers</td>
+<td>com.training.sanity.tests.RTTC_081</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>navigateToCustomerPage</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>searchCustomerToDelete</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>setUp</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>displayCustomersOptions</td>
+<td>returnProduct</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
