--- a/Selenium-Automation-Elearning-Framework-TestNG/test-output/old/Default suite/methods-alphabetical.html
+++ b/Selenium-Automation-Elearning-Framework-TestNG/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="90c9c3">  <td>19/03/12 19:43:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParentChildForCustomers.displayCustomersOptions()[pri:2, instance:com.training.sanity.tests.ParentChildForCustomers@27efef64]">displayCustomersOptions</td> 
+<tr bgcolor="90c9c3">  <td>19/03/20 16:07:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC_081.returnProduct()[pri:0, instance:com.training.sanity.tests.RTTC_081@27efef64]">returnProduct</td> 
   <td>main@832947102</td>   <td></td> </tr>
-<tr bgcolor="90c9c3">  <td>19/03/12 19:43:58</td>   <td>436</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParentChildForCustomers.navigateToCustomerPage()[pri:3, instance:com.training.sanity.tests.ParentChildForCustomers@27efef64]">navigateToCustomerPage</td> 
-  <td>main@832947102</td>   <td></td> </tr>
-<tr bgcolor="90c9c3">  <td>19/03/12 19:43:59</td>   <td>1163</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParentChildForCustomers.searchCustomerToDelete()[pri:4, instance:com.training.sanity.tests.ParentChildForCustomers@27efef64]">searchCustomerToDelete</td> 
-  <td>main@832947102</td>   <td></td> </tr>
-<tr bgcolor="90c9c3">  <td>19/03/12 19:43:49</td>   <td>-8852</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParentChildForCustomers.setUp()[pri:1, instance:com.training.sanity.tests.ParentChildForCustomers@27efef64]">setUp</td> 
-  <td>main@832947102</td>   <td></td> </tr>
-<tr bgcolor="90c9c3">  <td>19/03/12 19:43:49</td>   <td>-8888</td> <td title="&gt;&gt;ParentChildForCustomers.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.ParentChildForCustomers@27efef64]">&gt;&gt;setUpBeforeClass</td> 
+<tr bgcolor="90c9c3">  <td>19/03/20 16:07:03</td>   <td>-10868</td> <td title="&gt;&gt;RTTC_081.setUp()[pri:0, instance:com.training.sanity.tests.RTTC_081@27efef64]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@832947102</td>   <td></td> </tr>
-<tr bgcolor="90c9c3">  <td>19/03/12 19:44:00</td>   <td>2185</td> <td title="&lt;&lt;ParentChildForCustomers.tearDown()[pri:0, instance:com.training.sanity.tests.ParentChildForCustomers@27efef64]">&lt;&lt;tearDown</td> 
+<tr bgcolor="90c9c3">  <td>19/03/20 16:07:28</td>   <td>14301</td> <td title="&lt;&lt;RTTC_081.tearDown()[pri:0, instance:com.training.sanity.tests.RTTC_081@27efef64]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@832947102</td>   <td></td> </tr>
 </table>
