Complex Test cases- Retail 81 to 85

--- a/Selenium-Automation-Elearning-Framework-TestNG/test-output/old/Default suite/methods-alphabetical.html
+++ b/Selenium-Automation-Elearning-Framework-TestNG/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="90c9c3">  <td>19/03/20 16:07:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC_081.returnProduct()[pri:0, instance:com.training.sanity.tests.RTTC_081@27efef64]">returnProduct</td> 
-  <td>main@832947102</td>   <td></td> </tr>
-<tr bgcolor="90c9c3">  <td>19/03/20 16:07:03</td>   <td>-10868</td> <td title="&gt;&gt;RTTC_081.setUp()[pri:0, instance:com.training.sanity.tests.RTTC_081@27efef64]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@832947102</td>   <td></td> </tr>
-<tr bgcolor="90c9c3">  <td>19/03/20 16:07:28</td>   <td>14301</td> <td title="&lt;&lt;RTTC_081.tearDown()[pri:0, instance:com.training.sanity.tests.RTTC_081@27efef64]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@832947102</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>19/04/01 17:04:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC_082.returnProductwithExcel(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.training.sanity.tests.RTTC_082@47c62251]">returnProductwithExcel</td> 
+  <td>main@667026744</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>19/04/01 17:04:47</td>   <td>9829</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC_082.returnProductwithExcel(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.training.sanity.tests.RTTC_082@47c62251]">returnProductwithExcel</td> 
+  <td>main@667026744</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>19/04/01 17:04:54</td>   <td>16774</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC_082.returnProductwithExcel(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.training.sanity.tests.RTTC_082@47c62251]">returnProductwithExcel</td> 
+  <td>main@667026744</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>19/04/01 17:05:01</td>   <td>24292</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC_082.returnProductwithExcel(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.training.sanity.tests.RTTC_082@47c62251]">returnProductwithExcel</td> 
+  <td>main@667026744</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>19/04/01 17:04:19</td>   <td>-17660</td> <td>&nbsp;</td><td title="&gt;&gt;RTTC_082.setUp()[pri:0, instance:com.training.sanity.tests.RTTC_082@47c62251]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@667026744</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>19/04/01 17:04:34</td>   <td>-2626</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC_082.showOptions()[pri:1, instance:com.training.sanity.tests.RTTC_082@47c62251]">showOptions</td> 
+  <td>main@667026744</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>19/04/01 17:05:08</td>   <td>31296</td> <td>&nbsp;</td><td title="&lt;&lt;RTTC_082.tearDown()[pri:0, instance:com.training.sanity.tests.RTTC_082@47c62251]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@667026744</td>   <td></td> </tr>
 </table>
