--- a/Selenium-Automation-Elearning-Framework-TestNG/test-output/index.html
+++ b/Selenium-Automation-Elearning-Framework-TestNG/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\KetakiPendse\AppData\Local\Temp\testng-eclipse--648481666\testng-customsuite.xml</span>
+                    <span>C:\Users\KetakiPendse\AppData\Local\Temp\testng-eclipse--496494263\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">5 methods,   5 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,27 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC_081" hash-for-method="returnProduct">returnProduct</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC_082" hash-for-method="returnProductwithExcel(1, sunil, sunil, nagaraj, sunil@gmail.com, 9876543210, Integer vitae iaculis massa, SKU-003)">returnProductwithExcel(1, sunil, sunil, nagaraj, sunil@gmail.com, 9876543210, Integer vitae iaculis massa, SKU-003)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC_082" hash-for-method="returnProductwithExcel(4, priya, priya, prabhu, priya@gmail.com, 8906754321, Microwave, SKU-003)">returnProductwithExcel(4, priya, priya, prabhu, priya@gmail.com, 8906754321, Microwave, SKU-003)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC_082" hash-for-method="returnProductwithExcel(3, puli, puli, keshi, puli@gmail.com, 6789043217, Onida, SKU-003)">returnProductwithExcel(3, puli, puli, keshi, puli@gmail.com, 6789043217, Onida, SKU-003)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC_082" hash-for-method="returnProductwithExcel(2, manzoor, manzoor, mehadi, mehadi@gmail.com, 8906543210, Samsung, SKU-003)">returnProductwithExcel(2, manzoor, manzoor, mehadi, mehadi@gmail.com, 8906543210, Samsung, SKU-003)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC_082" hash-for-method="showOptions">showOptions</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +140,46 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.training.sanity.tests.RTTC_081</span>
+              <span class="class-name">com.training.sanity.tests.RTTC_082</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="returnProduct">
-                  </a> <!-- returnProduct -->
-                  <span class="method-name">returnProduct</span>
+                  <a name="returnProductwithExcel(1, sunil, sunil, nagaraj, sunil@gmail.com, 9876543210, Integer vitae iaculis massa, SKU-003)">
+                  </a> <!-- returnProductwithExcel(1, sunil, sunil, nagaraj, sunil@gmail.com, 9876543210, Integer vitae iaculis massa, SKU-003) -->
+                  <span class="method-name">returnProductwithExcel</span>
+                  <span class="parameters">(1, sunil, sunil, nagaraj, sunil@gmail.com, 9876543210, Integer vitae iaculis massa, SKU-003)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="returnProductwithExcel(4, priya, priya, prabhu, priya@gmail.com, 8906754321, Microwave, SKU-003)">
+                  </a> <!-- returnProductwithExcel(4, priya, priya, prabhu, priya@gmail.com, 8906754321, Microwave, SKU-003) -->
+                  <span class="method-name">returnProductwithExcel</span>
+                  <span class="parameters">(4, priya, priya, prabhu, priya@gmail.com, 8906754321, Microwave, SKU-003)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="returnProductwithExcel(3, puli, puli, keshi, puli@gmail.com, 6789043217, Onida, SKU-003)">
+                  </a> <!-- returnProductwithExcel(3, puli, puli, keshi, puli@gmail.com, 6789043217, Onida, SKU-003) -->
+                  <span class="method-name">returnProductwithExcel</span>
+                  <span class="parameters">(3, puli, puli, keshi, puli@gmail.com, 6789043217, Onida, SKU-003)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="returnProductwithExcel(2, manzoor, manzoor, mehadi, mehadi@gmail.com, 8906543210, Samsung, SKU-003)">
+                  </a> <!-- returnProductwithExcel(2, manzoor, manzoor, mehadi, mehadi@gmail.com, 8906543210, Samsung, SKU-003) -->
+                  <span class="method-name">returnProductwithExcel</span>
+                  <span class="parameters">(2, manzoor, manzoor, mehadi, mehadi@gmail.com, 8906543210, Samsung, SKU-003)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="showOptions">
+                  </a> <!-- showOptions -->
+                  <span class="method-name">showOptions</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +187,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\KetakiPendse\AppData\Local\Temp\testng-eclipse--648481666\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\KetakiPendse\AppData\Local\Temp\testng-eclipse--496494263\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +196,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.training.sanity.tests.RTTC_081&quot;/&gt;
+      &lt;class name=&quot;com.training.sanity.tests.RTTC_082&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -184,16 +236,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(5);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'returnProduct')
-data.setCell(0, 2, 'com.training.sanity.tests.RTTC_081')
-data.setCell(0, 3, 14216);
+data.setCell(0, 1, 'returnProductwithExcel')
+data.setCell(0, 2, 'com.training.sanity.tests.RTTC_082')
+data.setCell(0, 3, 9827);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'returnProductwithExcel')
+data.setCell(1, 2, 'com.training.sanity.tests.RTTC_082')
+data.setCell(1, 3, 7516);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'returnProductwithExcel')
+data.setCell(2, 2, 'com.training.sanity.tests.RTTC_082')
+data.setCell(2, 3, 7003);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'returnProductwithExcel')
+data.setCell(3, 2, 'com.training.sanity.tests.RTTC_082')
+data.setCell(3, 3, 6944);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'showOptions')
+data.setCell(4, 2, 'com.training.sanity.tests.RTTC_082')
+data.setCell(4, 3, 1393);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 14 seconds</span>
+              <span class="suite-total-time">Total running time: 32 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,19 +287,35 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.training.sanity.tests.RTTC_081</div> <!-- chronological-class-name -->
-              <div class="configuration-suite before">
+              <div class="chronological-class-name">com.training.sanity.tests.RTTC_082</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-suite before -->
+              </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">returnProduct</span>
-                <span class="method-start">10875 ms</span>
+                <span class="method-name">showOptions</span>
+                <span class="method-start">15044 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-suite after">
+              <div class="test-method">
+                <span class="method-name">returnProductwithExcel(1, sunil, sunil, nagaraj, sunil@gmail.com, 9876543210, Integer vitae iaculis massa, SKU-003)</span>
+                <span class="method-start">17670 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">returnProductwithExcel(2, manzoor, manzoor, mehadi, mehadi@gmail.com, 8906543210, Samsung, SKU-003)</span>
+                <span class="method-start">27499 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">returnProductwithExcel(3, puli, puli, keshi, puli@gmail.com, 6789043217, Onida, SKU-003)</span>
+                <span class="method-start">34444 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">returnProductwithExcel(4, priya, priya, prabhu, priya@gmail.com, 8906754321, Microwave, SKU-003)</span>
+                <span class="method-start">41962 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">25176 ms</span>
-              </div> <!-- configuration-suite after -->
+                <span class="method-start">48966 ms</span>
+              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
